finish to update profile page and customise devise

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -21,7 +21,7 @@
                 <% end %>
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <%= link_to 'Profile', '#', class:"dropdown-item" %>
+                <%= link_to 'Profile', edit_user_registration_path, class:"dropdown-item" %>
                 <%= link_to 'Build CV', '#', class:"dropdown-item" %>
                 <%= link_to 'Sign Out', destroy_user_session_path, method: :delete, class:"dropdown-item"%>
               </div>
