--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,43 +1,98 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<%= render 'shared/header' %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+<div class="row mt-5">
+  <div class="col-md-3"></div>
+  <div class="col-md-6">
+    <legend>Profile</legend>
   </div>
+</div>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
+<div class="row">
+  <div class="col-md-3"></div>
+  <div class="col-md-6">
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+        <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
+        <div class="form-group">
+          <%= f.label :email %><br />
+          <%= f.email_field :email, autofocus: true, class:"form-control" %>
+        </div>
+
+        <div class="form-group">
+          <%= f.label :first_name %><br />
+          <%= f.text_field :first_name, autofocus: true, class:"form-control" %>
+        </div>
+
+
+        <div class="form-group">
+          <%= f.label :last_name %><br />
+          <%= f.text_field :last_name, autofocus: true, class:"form-control" %>
+        </div>
+
+
+        <div class="form-group">
+          <%= f.label :phone_number %><br />
+          <%= f.phone_field :phone_number, autofocus: true, class:"form-control" %>
+        </div>
+
+
+        <div class="form-group">
+          <%= f.label :city %><br />
+          <%= f.text_field :city, class:"form-control" %>
+        </div>
+
+
+        <div class="form-group">
+          <%= f.label :street %><br />
+          <%= f.text_field :street, class:"form-control" %>
+        </div>
+
+
+        <div class="form-group">
+          <%= f.label :apt %><br />
+          <%= f.text_field :apt, class:"form-control" %>
+        </div>
+
+
+        <div class="form-group">
+          <%= f.label :mission %><br />
+          <%= f.text_area :mission, class:"form-control", cols:8 %>
+        </div>
+
+
+        <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+            <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+        <% end %>
+
+        <div class="form-group">
+          <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+          <%= f.password_field :password, autocomplete: "off", class:"form-control" %>
+          <% if @minimum_password_length %>
+              <br />
+              <em><%= @minimum_password_length %> characters minimum</em>
+          <% end %>
+        </div>
+
+        <div class="form-group">
+          <%= f.label :password_confirmation %><br />
+          <%= f.password_field :password_confirmation, autocomplete: "off", class:"form-control" %>
+        </div>
+
+        <div class="form-group">
+          <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
+          <%= f.password_field :current_password, autocomplete: "off", class:"form-control" %>
+        </div>
+
+        <div class="actions">
+          <%= f.submit "Update", class:"btn btn-primary btn-block", id:"form-btns" %>
+        </div>
     <% end %>
+
+    <p>Cancel my account</p>
+
+    <small>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></small>
+
+    <%= link_to "Back", :back %>
+
   </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+</div>
