--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,5 +1,6 @@
 
 <%= render 'shared/header' %>
+<%= render 'shared/messages' %>
 
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
