--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,5 @@
 @import "bootstrap";
+@import "font-awesome";
 
 /*flash*/
 .alert-error {
@@ -29,6 +30,27 @@
   text-align: left;
 }
 
+//btns
+.btn.btn-primary{
+  color:#212529;
+  border-color: #FF9966;
+  background-color: transparent;
+}
+
+//icons
+//a
+.fa{
+  color: #FF9966;
+}
+
+
+
+.btn.btn-primary:hover {
+  color: #fff;
+  border-color: #FF9966;
+  background-color: #FF9966;
+}
+
 //home page
 div.jumbotron.jumbotron-fluid{
   background-color: rgba(255, 153, 102, 0.51);
@@ -49,30 +71,51 @@ div#index-user-card-block{
   background-color: rgba(250, 250, 250, 0.91);
   box-shadow: 1px 1px 1px 1px #888888;
 }
-#search-btn{
-  color:#212529;
-  border-color: #FF9966;
-  background-color: transparent;
 
-}
-
-#search-btn:hover {
-  color: #fff;
-  border-color: #FF9966;
-  background-color: #FF9966;
-}
 #user_id{
   width: 100%;
 }
-//sign up form
-#form-btns{
-  color:#212529;
-  border-color: #FF9966;
-  background-color: transparent;
+
+//dashboard sidebar
+#dashboard-navbar{
+  margin-bottom: 0 !important;
+  box-shadow: 1px 1px 1px #888888;
+}
+#wrapper {
+  padding-left: 250px;
+  transition: all 0.4s ease 0s;
 }
 
-#form-btns:hover{
-  color: #fff;
-  border-color: #FF9966;
-  background-color: #FF9966;
+#sidebar-wrapper {
+  margin-left: -220px;
+  left: 220px;
+  width: 220px;
+  background: rgb(255, 255, 255);
+  position: fixed;
+  height: 100%;
+  overflow-y: auto;
+  z-index: 1000;
+  transition: all 0.4s ease 0s;
+  box-shadow: 1px 1px 1px #888888;
+
+}
+
+#page-content-wrapper {
+  width: 100%;
+}
+
+.sidebar-nav {
+  position: absolute;
+  top: 0;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.Dashboard-sidebar{
+  font-size: 80%;
+  padding: 20px;
+  margin-left: 20%;
+  font-family: 'Sintony', sans-serif;
+  color:#FF9966;
 }
