--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -15,7 +15,7 @@
       <div class="row">
         <div class="col-md-1"></div>
         <div class="col-md-8">  <%= search_field_tag :user_id, params[:user_id], { placeholder: "Search a CV ", class: 'form-control'}%></div>
-        <div class="col-md-2"><button class="btn btn-primary btn-block" type="submit" id="search-btn">Search</button></div>
+        <div class="col-md-2"><button class="btn btn-primary btn-block" type="submit">Search</button></div>
       </div>
     </div>
   </div>
