--- a/app/views/shared/_dashboard_main.html.erb
+++ b/app/views/shared/_dashboard_main.html.erb
@@ -1,4 +1,5 @@
 <%= render 'shared/header' %>
+<%= render 'shared/messages' %>
 <%= render 'shared/dashboard_sidebar' %>
 <div id="wrapper">
   <div id="page-content-wrapper">
