--- a/app/views/shared/_dashboard_sidebar.html.erb
+++ b/app/views/shared/_dashboard_sidebar.html.erb
@@ -3,7 +3,7 @@
   <ul class="sidebar-nav">
     <legend class=" mt-5 ml-3">Track Record</legend>
     <li><h5> <%= link_to "Projects", '#', class: "Dashboard-sidebar" %></h5></li>
-    <li><h5> <%= link_to "Experience", '#', class: "Dashboard-sidebar" %></h5></li>
+    <li><h5> <%= link_to "Experience", experiences_path, class: "Dashboard-sidebar" %></h5></li>
 
     <legend class=" mt-3 ml-3">System Values</legend>
 
